# telegram-botkit

./: Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: ci.yml
src/: compose.rs  lib.rs  metrics.rs  scene.rs  session.rs
src/router/: common.rs  compose.rs  core.rs  mod.rs
src/ui/: callback.rs  editors.rs  formatters.rs  keyboard.rs  message.rs  mod.rs  prelude.rs  strings.rs
src/viewport/: mod.rs  redis.rs  store.rs
tests/: apply_effect.rs  compose_compile.rs  editors.rs  formatters.rs  router_restore.rs  scene_snapshot.rs  viewport_meta.rs
tests/fixtures/: compose_missing_scene.rs  compose_missing_scene.stderr
