[package]
name = "telegram-botkit"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[features]
redis = ["dep:redis"]
tracing = []
metrics = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
teloxide = { version = "0.17", features = ["redis-storage", "webhooks", "webhooks-axum"] }
tokio = { version = "1.39", features = ["macros", "rt-multi-thread"] }
thiserror = "2"
blake3 = "1"
hex = "0.4"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
redis = { version = "0.30", optional = true, default-features = false, features = ["aio", "tokio-comp", "connection-manager"] }

[dev-dependencies]
url = "2"